[tool.poetry]
name = "sushigo.py"
version = "0.1.0"
description = "A Pythonic Sushi Go Scorer."
authors = ["Josh Finnie <josh@jfin.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
